fix: hard-align share label with social buttons

--- a/blocks/news-detail/news-detail.css
+++ b/blocks/news-detail/news-detail.css
@@ -64,14 +64,16 @@
 }
 
 .news-detail-share-label {
-  display: inline-flex;
-  align-items: center;
+  display: inline-block;
   font-size: 0.82rem;
   color: #334155;
   font-weight: 700;
   margin-right: 0.45rem;
-  min-height: 33px;
-  line-height: 1;
+  height: 33px;
+  line-height: 33px;
+  vertical-align: middle;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .news-detail-share-link {
